# agency-saas-core

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: chat.py  clients.py  connected_accounts.py  metrics.py  organizations.py  reports.py  upload.py
backend/app/core/: celery_app.py  database.py  exceptions.py  security.py
backend/app/db/alembic/: env.py  script.py.mako
backend/app/db/alembic/versions/: 001_create_core_tables.py  003_revert_logo_url_to_varchar.py  004_create_connected_accounts.py  6295287caf8f_change_logo_url_to_text.py
backend/app/models/: __init__.py  client.py  connected_account.py  organization.py  user.py
backend/app/schemas/: client.py  connected_account.py  organization.py
backend/app/storage/: __init__.py  factory.py  interface.py  r2_provider.py
backend/app/tasks/: backfill.py  report_generation.py
backend/tests/: conftest.py  test_clients_isolation.py  test_logo_cleanup.py  test_token_encryption.py  test_upload_isolation.py
docs/: PLAN.md  SPEC.md  STRUCTURE.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: layout.module.css  layout.tsx  page.module.css  page.tsx
frontend/src/lib/: api-client.ts  clerk.ts  utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
(+21 files in other folders)
