[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "agency-saas-core-backend"
version = "0.1.0"
description = "Agency Reporting SaaS — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Settings
    "pydantic-settings>=2.3.0",
    "pydantic>=2.7.0",

    # Background jobs
    "celery>=5.4.0",
    "redis>=5.0.4",

    # Auth & security
    "cryptography>=42.0.8",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",

    # Email (Phase 4)
    "resend>=2.1.0",

    # PDF (Phase 3)
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
